ingress/2.app-test-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app
#   namespace: ingress-controller
# spec:
#   rules:
#   - host: phamtiensy.test
#     http:
#       paths:
#       - path: /test
#         pathType: Prefix  # Yêu cầu phải chỉ định pathType trong phiên bản mới
#         backend:
#           service:
#             name: http-test-svc
#             port:
#               number: 80
              
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-controller
  rules:
  - host: "phamtiensy.test"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-test-svc
            port:
              number: 80
